# historic-gb-generation-mix

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ingest.yml
app/: streamlit_app.py
db/: ddl.sql  models.py
ingest/: __init__.py  client.py  load.py  run.py  transform.py  validate.py
tests/: conftest.py  test_client.py  test_load.py  test_run.py  test_transform.py  test_validate.py
