[project]
name = "historic-gb-generation-mix"
version = "0.1.0"
description = "Historic GB Generation Mix: ingestion, storage, and Streamlit UI."
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","PL","C90"]
ignore = ["E501","PLR0913"]  # line length handled by black AND allow many args for CLI entrypoints
per-file-ignores = { "tests/*" = ["PLR2004"] }